@@ -15,6 +15,8 @@ import trinsdar.gt4r.data.GT4RMaterialTags;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import static muramasa.antimatter.data.AntimatterMaterialTypes.*;
+import static muramasa.antimatter.data.AntimatterMaterials.*;
 import static muramasa.antimatter.material.MaterialTags.ELEC;
 import static trinsdar.gt4r.data.Materials.*;
 import static trinsdar.gt4r.data.RecipeMaps.ELECTROLYZING;
@@ -29,17 +31,17 @@ public class ElectrolyzerLoader {
             if (m.has(GT4RMaterialTags.ELEC90)) power = 90;
             if (m.has(GT4RMaterialTags.ELEC120)) power = 120;
             if (power == 0) return;
-            if (!m.has(AntimatterMaterialTypes.DUST) && !m.has(AntimatterMaterialTypes.LIQUID) && !m.has(AntimatterMaterialTypes.GAS)) return;
+            if (!m.has(DUST) && !m.has(LIQUID) && !m.has(GAS)) return;
             int count = m.getProcessInto().stream().mapToInt(t -> t.s).sum();
-            if (m.has(AntimatterMaterialTypes.LIQUID) || m.has(AntimatterMaterialTypes.GAS)) count *= 4;
+            if (m.has(LIQUID) || m.has(GAS)) count *= 4;
             add(m, power, (int) m.getMass() * count);
         });
 
-        ELECTROLYZING.RB().fi(AntimatterMaterials.Water.getLiquid(3000)).fo(Hydrogen.getGas(2000), Oxygen.getGas(1000)).add(2000, 30);
-        ELECTROLYZING.RB().ii(RecipeIngredient.of(new ItemStack(Items.BONE_MEAL, 3))).io(AntimatterMaterialTypes.DUST.get(Calcium, 1)).add(24, 106);
-        ELECTROLYZING.RB().ii(RecipeIngredient.of(new ItemStack(Blocks.SAND, 8))).io(AntimatterMaterialTypes.DUST.get(SiliconDioxide, 1)).add(500, 25);
-        ELECTROLYZING.RB().ii(RecipeIngredient.of(new ItemStack(Blocks.RED_SAND, 8))).io(AntimatterMaterialTypes.DUST.get(SiliconDioxide, 1), AntimatterMaterialTypes.DUST_TINY.get(AntimatterMaterials.Iron, 1)).add(500, 25);
-        ELECTROLYZING.RB().ii(RecipeIngredient.of(AntimatterMaterialTypes.DUST.get(AntimatterMaterials.Diamond, 1))).io(AntimatterMaterialTypes.DUST.get(Carbon, 64), AntimatterMaterialTypes.DUST.get(Carbon, 64)).add(1536,60);
+        ELECTROLYZING.RB().fi(Water.getLiquid(3000)).fo(Hydrogen.getGas(2000), Oxygen.getGas(1000)).add("water",2000, 30);
+        ELECTROLYZING.RB().ii(RecipeIngredient.of(new ItemStack(Items.BONE_MEAL, 3))).io(DUST.get(Calcium, 1)).add("bone_meal",24, 106);
+        ELECTROLYZING.RB().ii(RecipeIngredient.of(new ItemStack(Blocks.SAND, 8))).io(DUST.get(SiliconDioxide, 1)).add("sand",500, 25);
+        ELECTROLYZING.RB().ii(RecipeIngredient.of(new ItemStack(Blocks.RED_SAND, 8))).io(DUST.get(SiliconDioxide, 1), DUST_TINY.get(Iron, 1)).add("red_sand",500, 25);
+        ELECTROLYZING.RB().ii(RecipeIngredient.of(DUST.get(Diamond, 1))).io(DUST.get(Carbon, 64), DUST.get(Carbon, 64)).add("diamond_dust",1536,60);
         add(Steel,50, 60, 2600);
         add(DarkAsh, 1, 30, 24);
         add(AntimatterMaterials.Coal, 1, 30, 24);
@@ -65,26 +67,26 @@ public class ElectrolyzerLoader {
 
     private static void add(Material dust, int count, long euT, int duration) {
         List<MaterialStack> stacks = dust.getProcessInto();
-        List<FluidStack> fluidStacks = stacks.stream().filter(t -> (t.m.has(AntimatterMaterialTypes.LIQUID) || t.m.has(AntimatterMaterialTypes.GAS)) && !t.m.has(AntimatterMaterialTypes.DUST)).map(t -> {
-            return t.m.has(AntimatterMaterialTypes.LIQUID) ? t.m.getLiquid(t.s * 1000) : t.m.getGas(t.s * 1000);
-        }).collect(Collectors.toList());
-        List<ItemStack> itemStacks = dust.getProcessInto().stream().filter(t -> t.m.has(AntimatterMaterialTypes.DUST)).map(t -> new ItemStack(AntimatterMaterialTypes.DUST.get(t.m), t.s))
-                .collect(Collectors.toList());
+        List<FluidStack> fluidStacks = stacks.stream().filter(t -> (t.m.has(LIQUID) || t.m.has(GAS)) && !t.m.has(DUST)).map(t -> {
+            return t.m.has(LIQUID) ? t.m.getLiquid(t.s * 1000) : t.m.getGas(t.s * 1000);
+        }).toList();
+        List<ItemStack> itemStacks = dust.getProcessInto().stream().filter(t -> t.m.has(DUST)).map(t -> new ItemStack(DUST.get(t.m), t.s)).toList();
         RecipeBuilder rb = ELECTROLYZING.RB();
-        if ((dust.has(AntimatterMaterialTypes.LIQUID) || dust.has(AntimatterMaterialTypes.GAS)) && !dust.has(AntimatterMaterialTypes.DUST)){
+        String suffix = dust.has(LIQUID) ? "_liquid" : dust.has(GAS) ? "_gas" :"_dust";
+        if ((dust.has(LIQUID) || dust.has(GAS)) && !dust.has(DUST)){
             rb.fi(getFluid(dust,count * 1000));
         } else {
-            rb.ii(RecipeIngredient.of(AntimatterMaterialTypes.DUST.get(dust), count));
+            rb.ii(RecipeIngredient.of(DUST.get(dust), count));
         }
         if (!itemStacks.isEmpty()) rb.io(itemStacks.toArray(new ItemStack[0]));
         if (!fluidStacks.isEmpty()) rb.fo(fluidStacks.toArray(new FluidStack[0]));
-        rb.add(duration, euT);
+        rb.add(dust.getId() + suffix, duration, euT);
     }
 
     private static FluidStack getFluid(Material mat, int amount){
-        if (mat.has(AntimatterMaterialTypes.LIQUID)){
+        if (mat.has(LIQUID)){
             return mat.getLiquid(amount);
-        } else if (mat.has(AntimatterMaterialTypes.GAS)){
+        } else if (mat.has(GAS)){
             return mat.getGas(amount);
         } else if (mat.has(AntimatterMaterialTypes.PLASMA)){
             return mat.getPlasma(amount);
